crates/runtime/benches/snapshots/bench__s3_arrow_memory_use_source_tpch_q8.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+--------+------------+
| o_year | mkt_share  |
+--------+------------+
| 1995.0 | 0.03443589 |
| 1996.0 | 0.04148552 |
+--------+------------+
