crates/runtime/benches/snapshots/bench__s3_clickbench_q10.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------+-----------------------+----------+---------------------------+-----------------------------+
| RegionID | sum(hits.AdvEngineID) | c        | avg(hits.ResolutionWidth) | count(DISTINCT hits.UserID) |
+----------+-----------------------+----------+---------------------------+-----------------------------+
| 229      | 2077656               | 18295832 | 1506.085243130785         | 2845673                     |
| 2        | 441662                | 6687587  | 1479.8386542111527        | 1081016                     |
| 208      | 285925                | 4261812  | 1285.2593246722286        | 831676                      |
| 169      | 100887                | 3320229  | 1465.9073732564832        | 604583                      |
| 32       | 81498                 | 1843518  | 1538.0376568061718        | 216010                      |
| 34       | 161779                | 1792369  | 1548.360152401654         | 299479                      |
| 184      | 55526                 | 1755192  | 1506.8082967561384        | 322661                      |
| 42       | 108820                | 1542717  | 1587.1085208758313        | 243181                      |
| 107      | 120470                | 1516690  | 1548.6028970982863        | 272448                      |
| 51       | 98212                 | 1435578  | 1579.8860354505293        | 211505                      |
+----------+-----------------------+----------+---------------------------+-----------------------------+
