crates/runtime/benches/snapshots/bench__s3_clickbench_q11.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------------+---------+
| MobilePhoneModel | u       |
+------------------+---------+
| iPad             | 1090347 |
| iPhone           | 45758   |
| A500             | 16046   |
| N8-00            | 5565    |
| iPho             | 3300    |
| ONE TOUCH 6030A  | 2759    |
| GT-P7300B        | 1907    |
| 3110000          | 1871    |
| GT-I9500         | 1598    |
| eagle75          | 1492    |
+------------------+---------+
