crates/runtime/benches/snapshots/bench__s3_clickbench_q12.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+------------------+--------+
| MobilePhone | MobilePhoneModel | u      |
+-------------+------------------+--------+
| 1           | iPad             | 931038 |
| 5           | iPad             | 48385  |
| 6           | iPad             | 29710  |
| 7           | iPad             | 28391  |
| 118         | A500             | 16005  |
| 6           | iPhone           | 14516  |
| 26          | iPhone           | 13566  |
| 10          | iPad             | 11433  |
| 32          | iPad             | 9503   |
| 13          | iPad             | 9417   |
+-------------+------------------+--------+
