crates/runtime/benches/snapshots/bench__s3_clickbench_q14.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+---------------------------+-------+
| SearchPhrase              | u     |
+---------------------------+-------+
| карелки                   | 23673 |
| смотреть онлайн           | 19747 |
| албатрутдин               | 18394 |
| смотреть онлайн бесплатно | 17553 |
| смотреть                  | 14603 |
| экзоидные                 | 14529 |
| мангу в зарабей грама     | 14198 |
| сколько мытищи            | 9007  |
| дружке помещение          | 8792  |
| комбинирование смотреть   | 7572  |
+---------------------------+-------+
