crates/runtime/benches/snapshots/bench__s3_clickbench_q17.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+---------------------+--------------+----------+
| UserID              | SearchPhrase | count(*) |
+---------------------+--------------+----------+
| 1313338681122956954 |              | 29097    |
| 1907779576417363396 |              | 25333    |
| 2305303682471783379 |              | 10597    |
| 7982623143712728547 |              | 6669     |
| 7280399273658728997 |              | 6408     |
| 1090981537032625727 |              | 6196     |
| 5730251990344211405 |              | 6019     |
| 6018350421959114808 |              | 5990     |
| 835157184735512989  |              | 5209     |
| 770542365400669095  |              | 4906     |
+---------------------+--------------+----------+
