crates/runtime/benches/snapshots/bench__s3_clickbench_q18.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+--------------------+----------------------------------+----------+
| UserID             | SearchPhrase                     | count(*) |
+--------------------+----------------------------------+----------+
| 949984827993538706 | эфект                            | 2        |
| 950002213845432202 |                                  | 1        |
| 950004541571787848 | салья машина                     | 2        |
| 950113409072788610 | новости                          | 1        |
| 950113409072788610 | нализация вология у под          | 1        |
| 950113409072788610 | наруто 2013 онлайн               | 1        |
| 950138176938222777 |                                  | 1        |
| 950235578418183544 | конденский рубеж смотреть сушуар | 1        |
| 950338919516514282 |                                  | 1        |
| 950338919516514282 | ищу районам                      | 1        |
+--------------------+----------------------------------+----------+
