crates/runtime/benches/snapshots/bench__s3_clickbench_q19.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+---------------------+------+--------------+----------+
| UserID              | m    | SearchPhrase | count(*) |
+---------------------+------+--------------+----------+
| 1313338681122956954 | 31.0 |              | 589      |
| 1313338681122956954 | 28.0 |              | 578      |
| 1313338681122956954 | 29.0 |              | 572      |
| 1313338681122956954 | 33.0 |              | 567      |
| 1313338681122956954 | 27.0 |              | 557      |
| 1313338681122956954 | 32.0 |              | 554      |
| 1313338681122956954 | 30.0 |              | 552      |
| 1313338681122956954 | 34.0 |              | 546      |
| 1313338681122956954 | 26.0 |              | 540      |
| 1313338681122956954 | 10.0 |              | 539      |
+---------------------+------+--------------+----------+
