crates/runtime/benches/snapshots/bench__s3_clickbench_q21.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------+
| count(*) |
+----------+
| 15911    |
+----------+
